Intercambio de moneda (Exitosa)

--- a/src/main/java/com/mycompany/conversordivisas/Conversor.form
+++ b/src/main/java/com/mycompany/conversordivisas/Conversor.form
@@ -63,17 +63,9 @@
                                       <Group type="102" alignment="0" attributes="0">
                                           <Component id="jComboBoxMonedaActual" min="-2" pref="144" max="-2" attributes="0"/>
                                           <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
-                                          <Group type="103" groupAlignment="0" attributes="0">
-                                              <Group type="102" attributes="0">
-                                                  <Component id="jLabelCantidad" min="-2" max="-2" attributes="0"/>
-                                                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                                              </Group>
-                                              <Group type="102" attributes="0">
-                                                  <Component id="jLabelFlecha" min="-2" max="-2" attributes="0"/>
-                                                  <EmptySpace pref="30" max="32767" attributes="0"/>
-                                                  <Component id="jComboBoxMonedaNueva" min="-2" pref="144" max="-2" attributes="0"/>
-                                              </Group>
-                                          </Group>
+                                          <Component id="jLabelFlecha" min="-2" max="-2" attributes="0"/>
+                                          <EmptySpace pref="30" max="32767" attributes="0"/>
+                                          <Component id="jComboBoxMonedaNueva" min="-2" pref="144" max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
                                   <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
@@ -87,6 +79,11 @@
                           <Component id="jLabelMonedaNueva" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="49" max="-2" attributes="0"/>
                       </Group>
+                      <Group type="102" alignment="1" attributes="0">
+                          <EmptySpace max="32767" attributes="0"/>
+                          <Component id="jLabelConversion" min="-2" pref="197" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="132" max="-2" attributes="0"/>
+                      </Group>
                       <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" attributes="0">
@@ -95,15 +92,16 @@
                               </Group>
                               <Group type="102" alignment="0" attributes="0">
                                   <EmptySpace min="-2" pref="159" max="-2" attributes="0"/>
-                                  <Component id="jTextFieldCantidad" min="-2" pref="139" max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="0" attributes="0">
+                                      <Group type="102" alignment="0" attributes="0">
+                                          <EmptySpace min="40" pref="40" max="-2" attributes="0"/>
+                                          <Component id="jLabelCantidad" min="-2" max="-2" attributes="0"/>
+                                      </Group>
+                                      <Component id="jTextFieldCantidad" alignment="0" min="-2" pref="139" max="-2" attributes="0"/>
+                                  </Group>
                               </Group>
                           </Group>
                           <EmptySpace max="32767" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="1" attributes="0">
-                          <EmptySpace max="32767" attributes="0"/>
-                          <Component id="jLabelConversion" min="-2" pref="197" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="132" max="-2" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -126,11 +124,11 @@
                       <Component id="jComboBoxMonedaNueva" alignment="3" min="-2" pref="41" max="-2" attributes="0"/>
                       <Component id="jComboBoxMonedaActual" alignment="3" min="-2" pref="41" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace min="-2" pref="49" max="-2" attributes="0"/>
                   <Component id="jLabelCantidad" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Component id="jTextFieldCantidad" min="-2" pref="49" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jButtonConvertir" alignment="3" min="-2" pref="48" max="-2" attributes="0"/>
                       <Component id="jButtonIntercambiarMoneda1" alignment="3" min="-2" pref="48" max="-2" attributes="0"/>
@@ -202,6 +200,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Convertir!"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonConvertirActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="jButtonIntercambiarMoneda1">
           <Properties>
@@ -213,6 +214,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Intercambiar moneda"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonIntercambiarMoneda1ActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabelTitulo">
           <Properties>
